# RBF-FDax

./: .gitignore  README.md  pyproject.toml
notebooks/: 1d_laplacian_rbf.ipynb  rbf_dev.ipynb  rbf_dev_2d.ipynb
src/rbffd/: __init__.py  polyterms.py  rbf_fd.py
