[build-system]
requires = ["setuptools",
            "scipy",
            "jax",
            "numpy",
            "matplotlib",
            ]
build-backend = "setuptools.build_meta"

[project]
name = "RBF-FDax"
version = "0.0.1"
authors = [
  { name="Kevin Doherty", email="kvndhrty@gmail.com" },
]
description = "RBF-FD written in Jax"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/kvndhrty/RBF-FDax"
Issues = "https://github.com/kvndhrty/RBF-FDax/issues"